WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56129
Vertical text broken on Lion and Leopard
https://bugs.webkit.org/show_bug.cgi?id=56129
Summary
Vertical text broken on Lion and Leopard
Dave Hyatt
Reported
2011-03-10 11:55:00 PST
Vertical text is offset by a large amount on Lion and Leopard. It appears that the CTFontGetVerticalTranslationsForGlyphs method is different only on Snow Leopard.
Attachments
Patch
(2.27 KB, patch)
2011-03-10 11:56 PST
,
Dave Hyatt
no flags
Details
Formatted Diff
Diff
Patch
(2.09 KB, patch)
2011-03-10 12:07 PST
,
Dave Hyatt
mitz: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2011-03-10 11:56:37 PST
Created
attachment 85359
[details]
Patch
mitz
Comment 2
2011-03-10 11:58:25 PST
<
rdar://problem/9116368
>
Dave Hyatt
Comment 3
2011-03-10 12:07:15 PST
Created
attachment 85363
[details]
Patch
mitz
Comment 4
2011-03-10 12:08:43 PST
Comment on
attachment 85363
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=85363&action=review
> Source/WebCore/ChangeLog:5 > + Add Snow Leopard ifdefs for the scaling by point size and then the division by unitsPerEm.
Please add the bugs.webkit.org URL
Dave Hyatt
Comment 5
2011-03-10 12:15:53 PST
Fixed in
r80470
.
Dave Hyatt
Comment 6
2011-03-10 12:16:10 PST
Sorry,
r80740
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug