https://bugs.webkit.org/show_bug.cgi?id=56129, vertical text broken on Lion and Leopard.

Reviewed by Dan Bernstein.

Add Snow Leopard ifdefs for the scaling by point size and then the division by unitsPerEm to the
translationsTransform applied to the results from CTFontGetVerticalTranslationsForGlyphs, since
this is done already on Lion and Leopard.

* platform/graphics/mac/FontMac.mm:
(WebCore::showGlyphsWithAdvances):



Canonical link: https://commits.webkit.org/70628@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80740 268f45cc-cd09-0410-ab3c-d52691b4dbfc